<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#3b3b3b" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wt"
        android:orientation="vertical"
        android:padding="10dip" >

        <!-- View Title Label -->

        <DigitalClock
            android:id="@+id/digitalClock1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="DigitalClock"
            android:textColor="#ffffff"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/reg"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="40dp"
            android:textStyle="bold" />

        <!-- Name Label -->
        <!-- Name TextField -->

        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:ems="10"
            android:hint="@string/mobile_no"
            android:inputType="text|number"
            android:textColor="#009dde"
            android:textColorHint="#009dde" />

        <EditText
            android:id="@+id/registerName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="#009dde"
            android:textColorHint="#009dde" />

        <!-- Email Label -->
        <!-- Email TextField -->

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:textColor="#009dde"
            android:textColorHint="#009dde" />

        <!-- Password Label -->
        <!-- Password TextField -->

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textWebPassword"
            android:password="true"
            android:textColor="#009dde"
            android:textColorHint="#009dde" >

            <requestFocus />
        </EditText>

        <!-- Error message -->

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gen"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_weight="0.89"
                android:background="@drawable/btn"
                android:hint="@string/male"
                android:textColorHint="#ffffff" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="159dp"
                android:layout_height="match_parent"
                android:background="@drawable/btn"
                android:hint="@string/female"
                android:textColorHint="#ffffff" />

        </LinearLayout>

        <!-- Login Button -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="10dip"
            >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/dob"
                android:text="@string/dob"
                android:layout_marginRight="10dip"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="25dip" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.64"
                android:background="@drawable/btn"
                android:onClick="selectDate"
                android:text="Date of Birth"
                android:textColor="#ffffffff"
                android:textSize="20dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:ems="10"
            android:hint="@string/add"
            android:inputType="text"
            android:textColor="#009dde"
            android:textColorHint="#009dde" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="text"
            android:textColor="#009dde"
            android:textColorHint="#009dde" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/state"
            android:inputType="text"
            android:textColor="#009dde"
            android:textColorHint="#009dde" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/country"
            android:inputType="text"
            android:textColor="#009dde"
            android:textColorHint="#009dde" />

        <TextView
            android:id="@+id/register_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textColor="#e30000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dip"
            android:background="@drawable/btn"
            android:text="@string/reg"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:background="@null"
            android:text="Back to Login page"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>