<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="517dp"
        android:background="@drawable/wt"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp" >

            <Button
                android:id="@+id/button2"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:layout_marginRight="3dip"
                android:background="@drawable/hme" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dip"
                android:layout_weight="0.12"
                android:text="HOME"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="15dp" />

            <DigitalClock
                android:id="@+id/digitalClock1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dip"
                android:text="DigitalClock"
                android:textColor="#ffffff" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="SELECT TIME"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="159dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dip"
            android:background="@drawable/btn"
            android:text="@string/src"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="159dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dip"
            android:text="@string/to"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="169dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dip"
            android:background="@drawable/btn"
            android:text="@string/dest"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="@drawable/sc"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </LinearLayout>

        <Button
            android:id="@+id/button1"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dip"
            android:background="@drawable/btn"
            android:onClick="paym"
            android:text="@string/proceed"
            android:textColor="#ffffff"
            android:textSize="25sp" />

    </LinearLayout>

</ScrollView>
