<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wt" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <DigitalClock
                android:id="@+id/digitalClock1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="DigitalClock"
                android:textColor="#ffffff"
                android:textSize="15dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/msg1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="35dip"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dip"
            android:src="@drawable/station" />

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@drawable/btn"
            android:onClick="schdl"
            android:text="@string/route"
            android:textColor="#ffffff"
            android:textSize="25dip"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@drawable/btn"
            android:onClick="schd2"
            android:text="@string/profile"
            android:textColor="#ffffff"
            android:textSize="25dip"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@drawable/btn"
            android:onClick="schd3"
            android:text="MY TICKETS"
            android:textColor="#ffffff"
            android:textSize="25dip"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="40dip"
            android:layout_weight="0.79"
            android:background="@null"
            android:gravity="center"
            android:onClick="logout"
            android:text="@string/logout"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>