<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#3b3b3b" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wt"
        android:orientation="vertical"
        android:padding="10dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dip"
                android:layout_weight="0.09"
                android:background="@drawable/hme" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="7dip"
                android:layout_weight="0.73"
                android:text="HOME"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <DigitalClock
                android:id="@+id/digitalClock1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dip"
                android:text="DigitalClock"
                android:textColor="#ffffff"
                android:textSize="17dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
          
            android:layout_weight="1"
            android:text="@string/schedule"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dip"
            android:layout_weight="66.38"
            android:contentDescription="@string/schedule"
            android:src="@drawable/metro" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="15dip"
            android:layout_weight="0.60"
            android:text="@string/select_src"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@drawable/sc"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            android:textColor="#009dde" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="15dip"
            android:layout_weight="0.60"
            android:text="@string/select_des"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:animateLayoutChanges="true"
            android:background="@drawable/sc"
            android:clipChildren="false"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button1"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dip"
            android:background="@drawable/btn"
            android:text="@string/proceed"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>